--- a/runner_nb_cfg.ipynb
+++ b/runner_nb_cfg.ipynb
@@ -10,10 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nornir_netbox.plugins.inventory.netbox import NetBoxInventory2\n",
     "from nornir import InitNornir\n",
     "from nornir_netmiko.tasks import netmiko_send_command, netmiko_send_config\n",
     "from nornir_jinja2.plugins.tasks import template_file\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Servers pool\u001b[0m\n",
+      "\u001b[0m10.30.1.0/24\u001b[0m\n",
+      "\u001b[0mServers test pool\u001b[0m\n",
+      "\u001b[0m10.30.3.0/24\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# List all IPs prefixes from all sites\n",
     "nb_site = 'plgn'\n",
@@ -140,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "host SRV-PEV-5 {\n",
+      "  hardware ethernet 2A:2F:0A:9F:A8:B5;\n",
+      "  fixed-address 10.30.1.248;\n",
+      "}\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "templates_path = \"./templates/\"\n",
@@ -352,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -366,12 +391,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
