--- a/nb-wh-cfg.ipynb
+++ b/nb-wh-cfg.ipynb
@@ -2,16 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 82,
-=======
    "execution_count": 1,
->>>>>>> 698676d4c94d86e35312bdfbe80512e17dd776bc
    "metadata": {},
    "outputs": [],
    "source": [
     "from flask import Flask, request\n",
-<<<<<<< HEAD
     "from nornir import InitNornir\n",
     "import pynetbox\n",
     "#from nornir.core.inventory import Host\n",
@@ -19,62 +14,14 @@
     "from ipaddress import IPv4Network\n",
     "import ipaddress\n",
     "from jinja2 import Environment, FileSystemLoader"
-=======
-    "#import pynetbox"
->>>>>>> 698676d4c94d86e35312bdfbe80512e17dd776bc
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 60,
-=======
    "execution_count": 2,
->>>>>>> 698676d4c94d86e35312bdfbe80512e17dd776bc
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.68.5.5:8080\n",
-      "Press CTRL+C to quit\n",
-      "10.30.1.101 - - [11/Mar/2023 10:32:27] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "61\n",
-      "10.30.1.101/24\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-<<<<<<< HEAD
     "nr = InitNornir(\n",
     "    inventory={\n",
     "        \"plugin\": \"NetBoxInventory2\",\n",
@@ -90,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Servers pool\u001b[0m\n",
-      "\u001b[0m10.30.1.0/24\u001b[0m\n",
-      "\u001b[0mServers test pool\u001b[0m\n",
-      "\u001b[0m10.30.3.0/24\u001b[0m\n",
-      "\u001b[0m"
+      "Servers pool\n",
+      "10.30.1.0/24\n",
+      "Servers test pool\n",
+      "10.30.3.0/24\n"
      ]
     }
    ],
@@ -144,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +122,7 @@
       "host SRV-PEV-5 {\n",
       "  hardware ethernet 2A:2F:0A:9F:A8:B5;\n",
       "  fixed-address 10.30.1.248;\n",
-      "}\u001b[0m\n",
-      "\u001b[0m"
+      "}\n"
      ]
     }
    ],
@@ -201,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,13 +156,12 @@
       "host SRV-PEV-1 {\n",
       "  hardware ethernet None;\n",
       "  fixed-address 10.30.1.101;\n",
-      "}\u001b[0m\n",
-      "\u001b[0m"
+      "}\n"
      ]
     }
    ],
    "source": [
-    "#Create a Flask instance\n",
+    "# Create a Flask instance\n",
     "\"\"\" app = Flask(__name__)\n",
     "\n",
     "@app.route('/api/ip_address', methods=['POST'])\n",
@@ -264,22 +208,6 @@
     "    ip_address = ipaddress.ip_interface(device_ip).ip\n",
     "    )\n",
     "    print(content)"
-=======
-    "#Create a Flask instance\n",
-    "netbox_ipam = Flask(__name__)\n",
-    "\n",
-    "@netbox_ipam.route('/api/fixed_ip', methods=['POST'])\n",
-    "def mng_ip_address():\n",
-    "    ip_address = request.json [\"data\"][\"address\"]\n",
-    "    address_family = request.json[\"data\"][\"family\"][\"value\"]\n",
-    "    if  assigned_object_id := request.json[\"data\"][\"assigned_object_id\"]:\n",
-    "        print(assigned_object_id)\n",
-    "    print(ip_address)\n",
-    "    return \"Webhook received!\"\n",
-    "\n",
-    "netbox_ipam.run(host='0.0.0.0', port=8080)\n",
-    "if __name__ == \"__main__\": netbox_ipam.run()"
->>>>>>> 698676d4c94d86e35312bdfbe80512e17dd776bc
    ]
   }
  ],
