--- a/nb-wh-cfg.ipynb
+++ b/nb-wh-cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -146,13 +146,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:8080\n",
+      " * Running on http://10.68.5.5:8080\n",
+      "Press CTRL+C to quit\n",
+      "10.30.1.101 - - [11/Mar/2023 12:06:23] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "host SRV-PEV-5 {\n",
+      "  hardware ethernet 2A:2F:0A:9F:A8:B5;\n",
+      "  fixed-address 10.30.1.248;\n",
+      "}\n",
+      "{'event': 'updated', 'timestamp': '2023-03-11 07:06:23.021729+00:00', 'model': 'ipaddress', 'username': 'admin', 'request_id': '4fe21162-f018-4a32-a21e-559700b6208e', 'data': {'id': 14, 'url': '/api/ipam/ip-addresses/14/', 'display': '10.30.1.248/24', 'family': {'value': 4, 'label': 'IPv4'}, 'address': '10.30.1.248/24', 'vrf': None, 'tenant': {'id': 5, 'url': '/api/tenancy/tenants/5/', 'display': 'IT', 'name': 'IT', 'slug': 'it'}, 'status': {'value': 'dhcp', 'label': 'DHCP'}, 'role': None, 'assigned_object_type': 'dcim.interface', 'assigned_object_id': 67, 'assigned_object': {'id': 67, 'url': '/api/dcim/interfaces/67/', 'display': 'Gig-E 1', 'device': {'id': 10, 'url': '/api/dcim/devices/10/', 'display': 'SRV-PEV-5', 'name': 'SRV-PEV-5'}, 'name': 'Gig-E 1', 'cable': 16, '_occupied': True}, 'nat_inside': None, 'nat_outside': [], 'dns_name': 'srv-pev-5.ventprom.com', 'description': '', 'comments': '', 'tags': [], 'custom_fields': {}, 'created': '2023-01-28T06:26:50.562869Z', 'last_updated': '2023-03-11T07:06:22.921916Z'}, 'snapshots': {'prechange': {'created': '2023-01-28T06:26:50.562Z', 'last_updated': '2023-01-28T06:47:10.724Z', 'description': '', 'comments': '', 'address': '10.30.1.248/24', 'vrf': None, 'tenant': 5, 'status': 'active', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 67, 'nat_inside': None, 'dns_name': 'srv-pev-5.ventprom.com', 'custom_fields': {}, 'tags': []}, 'postchange': {'created': '2023-01-28T06:26:50.562Z', 'last_updated': '2023-03-11T07:06:22.921Z', 'description': '', 'comments': '', 'address': '10.30.1.248/24', 'vrf': None, 'tenant': 5, 'status': 'dhcp', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 67, 'nat_inside': None, 'dns_name': 'srv-pev-5.ventprom.com', 'custom_fields': {}, 'tags': []}}}\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Flask instance\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/api/fixed_ip', methods=['POST'])\n",
+    "def webhook():\n",
+    "    get_device_ips = [request.json[\"data\"][\"address\"]]\n",
+    "    get_device = request.json[\"data\"][\"assigned_object\"][\"device\"][\"name\"]\n",
+    "    #get_interface = request.json[\"data\"][\"assigned_object\"][\"name\"]\n",
+    "    get_address_family = request.json[\"data\"][\"family\"][\"value\"]\n",
+    "    #get_assigned_object_id = request.json[\"data\"][\"assigned_object_id\"]\n",
+    "    get_device_interface = nb.dcim.interfaces.get(request.json[\"data\"][\"assigned_object_id\"])\n",
+    "    #print(get_device_ips,device)\n",
+    "\n",
+    "    templates_path = \"./templates/\"\n",
+    "    environment = Environment(loader=FileSystemLoader(templates_path))\n",
+    "    template = environment.get_template(\"dhcpd_static.template\")\n",
+    "    #device_interface = list(nb.dcim.interfaces.filter(device=get_device, name=get_interface))\n",
+    "\n",
+    "    if get_device_interface.mgmt_only:\n",
+    "            print(\"\\tManagement interface, no changes will be performed...\")\n",
+    "    else:\n",
+    "        for device_ip in get_device_ips:\n",
+    "            #print(ipaddress.ip_interface(device_ip).ip)\n",
+    "            content = template.render(\n",
+    "            device_name = get_device,\n",
+    "            mac_address = get_device_interface.mac_address,\n",
+    "            ip_address = ipaddress.ip_interface(device_ip).ip\n",
+    "            )\n",
+    "            print(content)\n",
+    "\n",
+    "    print(request.json)\n",
+    "    \n",
+    "    return \"Webhook received!\"\n",
+    "\n",
+    "app.run(host='0.0.0.0', port=8080)\n",
+    "if __name__ == \"__main__\": app.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iDRAC\n",
       "host SRV-PEV-1 {\n",
       "  hardware ethernet None;\n",
       "  fixed-address 10.30.1.101;\n",
@@ -161,47 +249,17 @@
     }
    ],
    "source": [
-    "# Create a Flask instance\n",
-    "\"\"\" app = Flask(__name__)\n",
-    "\n",
-    "@app.route('/api/ip_address', methods=['POST'])\n",
-    "def webhook():\n",
-    "    device_ip =  request.json[\"data\"][\"address\"]\n",
-    "    device = request.json[\"data\"][\"assigned_object\"][\"device\"][\"name\"]\n",
-    "    interface = request.json[\"data\"][\"assigned_object\"][\"name\"]\n",
-    "    #print(ip.ip,ip.netmask,ip.network,ip.with_prefixlen,device)\n",
-    "    #print(request.json)\n",
-    "    \n",
-    "    templates_path = \"./templates/\"\n",
-    "    environment = Environment(loader=FileSystemLoader(templates_path))\n",
-    "    template = environment.get_template(\"dhcpd_static.template\")\n",
-    "\n",
-    "    for ip_prefix in get_all_ip_prefixes:\n",
-    "            if ipaddress.ip_interface(device_ip) in IPv4Network(ip_prefix.prefix):\n",
-    "                for device_interface in interface:\n",
-    "                    if device_ip.assigned_object.device.name == device_interface.device.name and device_interface.mac_address != None:\n",
-    "                        content = template.render(\n",
-    "                        device_name = device_interface.device.name,\n",
-    "                        mac_address = device_interface.mac_address,\n",
-    "                        ip_address = device_ip.address.split('/')[0]\n",
-    "                         )\n",
-    "                        print(content)\n",
-    "    \n",
-    "    return \"Webhook received!\"\n",
-    "\n",
-    "app.run(host='0.0.0.0', port=8080)\n",
-    "if __name__ == \"__main__\": app.run() \"\"\"\n",
-    "\n",
     "ip = ['10.30.1.101/24']\n",
-    "prefix = ['10.30.1.0/24']\n",
     "interface = 'iDRAC'\n",
     "device = 'SRV-PEV-1'\n",
     "templates_path = \"./templates/\"\n",
     "environment = Environment(loader=FileSystemLoader(templates_path))\n",
     "template = environment.get_template(\"dhcpd_static.template\")\n",
     "device_interface = list(nb.dcim.interfaces.filter(device=device, name=interface))\n",
+    "\n",
+    "assigned_interface_details = nb.dcim.interfaces.get('61')\n",
+    "print(assigned_interface_details)\n",
     "for device_ip in ip:\n",
-    "   # print(ipaddress.ip_interface(device_ip).ip)\n",
     "    content = template.render(\n",
     "    device_name = device,\n",
     "    mac_address = device_interface[0].mac_address,\n",
@@ -213,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -227,12 +285,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
