--- a/projet_fixed_ip_address/main.ipynb
+++ b/projet_fixed_ip_address/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import ipaddress\n",
     "from jinja2 import Environment, FileSystemLoader\n",
     "import json\n",
-    "from pydhcpdparser import parser"
+    "import re"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,44 +98,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data is assigne...\n",
-      "{'hardware': {'ethernet': 'None'}, 'fixed-address': '1.1.1.1'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_for_equal(device_name):\n",
+    "    \"\"\"\n",
+    "    Проверяем файл с конфигурацией на наличие в нем каких-либо настроек, связанных с передаваемым параметром\n",
+    "    :param device_name\n",
+    "    :return: None \n",
+    "    \"\"\"\n",
     "\n",
-    "    name = device_name.strip().casefold()\n",
-    "    with open(\"result.conf\") as f:\n",
-    "        conf = f.read()\n",
-    "        \n",
-    "    hosts = parser.parse(conf)\n",
-    "    d_keys = list(map(str.strip, list(hosts[0]['host'].keys())))\n",
-    "    if name in (key.casefold() for key in d_keys):\n",
-    "        d = (hosts[0]['host'][device_name])\n",
-    "            #del(hosts[0]['host'][device_name])\n",
-    "        print(\"Data is assigne...\")\n",
-    "        print(d)\n",
-    "            # delete matching content\n",
+    "    start,end = -2,-2 # start и end должны быть не пустыми и меньше -1\n",
+    "    name = device_name.strip().casefold() # избавляемся от пробелов и игнорируем регистр\n",
+    "    with open(\"result.conf\", 'r') as f: # открываем файл для чтения\n",
+    "        config = f.readlines() # считывем построчно и получаем список\n",
+    "    for line in config:\n",
+    "        if line.startswith('host'): # если в начале строки попадается 'host'\n",
+    "            if name in (s for s in line.strip().casefold().split()): # перебираем строку поэлементно на совпадение с 'name'\n",
+    "                start = config.index(line) # запоминаем индекс\n",
+    "                for i in range(start+1,len(config)): # продолжаем перебирать строки, начиная с индекса\n",
+    "                    if '}' in (s for s in list(config[i])): # разбиваем строку на отдельные символы и проверяем на совпадение с '}'\n",
+    "                        end = i\n",
+    "                        break\n",
+    "    \n",
+    "    if start >= 0 and end >=start : # значения для среза обязательно должны быть, и второе (end) должно быть не меньше первого (start)\n",
+    "        del config[start:end+1] # делаем срез списка (избавляемся от строк)\n",
+    "        with open(\"result.conf\", 'w') as w:\n",
+    "            w.writelines(config)\n",
+    "            w.close()\n",
+    "        print(\"'{}' is find and deleted there config...\".format(device_name))\n",
+    "    else: print(\"Configuration file does not contain '{}'...\".format(device_name))\n",
+    "    print(config)\n",
+    "    \n",
     "\n",
-    "test_for_equal('SRV-PEV-5 ')"
+    "#test_for_equal('SRV-PEV-5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dhcpd_config_file(j2_device_name,j2_mac_address,j2_ip_address):\n",
+    "def dhcpd_config_file(j2_device_name,j2_mac_address,j2_ip_address,event='None'):\n",
     "    \"\"\" \n",
     "    Заполнение шаблона значениями\n",
     "    :param j2_device_name: устройство \n",
@@ -144,36 +150,43 @@
     "    :return: None\n",
     "    \"\"\"\n",
     "    \n",
-    "    templates_path = \"./templates/\"\n",
-    "    environment = Environment(loader=FileSystemLoader(templates_path))\n",
-    "    template = environment.get_template(\"dhcpd_static.template\")\n",
-    "\n",
-    "    content = template.render(\n",
-    "    device_name = j2_device_name,\n",
-    "    mac_address = j2_mac_address,\n",
-    "    ip_address = j2_ip_address\n",
-    "    )\n",
+    "    test_for_equal(j2_device_name)\n",
     "    \n",
-    "    print(content)\n",
+    "    print(event)\n",
+    "    if event != 'delete':\n",
+    "        templates_path = \"./templates/\"\n",
+    "        environment = Environment(loader=FileSystemLoader(templates_path))\n",
+    "        template = environment.get_template(\"dhcpd_static.template\")\n",
     "\n",
-    "    # Сохраним получившийся текст\n",
-    "    with open('result.conf', 'a') as fp: \n",
-    "        fp.write(content + '\\n')\n",
+    "        content = template.render(\n",
+    "        device_name = j2_device_name,\n",
+    "        mac_address = j2_mac_address,\n",
+    "        ip_address = j2_ip_address\n",
+    "        )\n",
+    "        \n",
+    "        print(content)\n",
     "\n",
-    "    # Прочитаем записанный файл\n",
-    "    with open('result.conf', 'r') as fp: \n",
-    "        print(fp.read())"
+    "        # Сохраним получившийся текст\n",
+    "        with open('result.conf', 'a') as fp: \n",
+    "            fp.write(content + '\\n')\n",
+    "            fp.close()\n",
+    "\n",
+    "        # Прочитаем записанный файл\n",
+    "        with open('result.conf', 'r') as fp: \n",
+    "            print(fp.read())\n",
+    "\n",
+    "#dhcpd_config_file('SRV-PEV-1','None', '1.1.1.1', 'create')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_ip_address(netbox_interface,netbox_ip_address,netbox_address_family):\n",
     "    \"\"\"  \n",
-    "    Удаление ip адрес\n",
+    "    Удаление ip адреса\n",
     "    :param netbox_interface: ссылка на объект интерфейса pynetbox\n",
     "    :param netbox_ip_address: IPv4 адрес (IP/Prefix)\n",
     "    :param netbox_address_family: Версия IP (4|6)\n",
@@ -182,12 +195,21 @@
     "    \n",
     "    print(f\"Removing address {netbox_ip_address} \"\n",
     "          f\"from interface '{netbox_interface.name}' \"\n",
-    "          f\"on device '{netbox_interface.device.name}'...\")"
+    "          f\"on device '{netbox_interface.device.name}'...\")\n",
+    "\n",
+    "    if netbox_address_family == 4:\n",
+    "        ip_address = configure_interface_ipv4_address(netbox_ip_address)\n",
+    "        device_name = netbox_interface.device.name\n",
+    "        mac_address = netbox_interface.mac_address\n",
+    "    else:\n",
+    "        print(\"IPv6\")\n",
+    "        #configure_interface_ipv6_address(netbox_ip_address)\n",
+    "    dhcpd_config_file(device_name,mac_address,ip_address,event='delete')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +234,12 @@
     "        print(\"IPv6\")\n",
     "        #configure_interface_ipv6_address(netbox_ip_address)\n",
     "    \n",
-    "    dhcpd_config_file(device_name,mac_address,ip_address)"
+    "    dhcpd_config_file(device_name,mac_address,ip_address,event='create')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +279,7 @@
     "        print(\"IPv6\")\n",
     "        #configure_interface_ipv6_address(netbox_ip_address)\n",
     "    \n",
-    "    dhcpd_config_file(device_name,mac_address,ip_address)"
+    "    dhcpd_config_file(device_name,mac_address,ip_address,event='update')"
    ]
   },
   {
@@ -269,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,104 +340,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.68.5.5:8080\n",
-      "Press CTRL+C to quit\n",
-      "10.30.1.101 - - [11/Mar/2023 22:15:11] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating IP address...\n",
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 1.1.1.1;\n",
-      "}\n",
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 1.1.1.1;\n",
-      "}\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.101 - - [11/Mar/2023 22:15:19] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating IP address...\n",
-      "host SRV-PEV-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.101;\n",
-      "}\n",
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 1.1.1.1;\n",
-      "}\n",
-      "host SRV-PEV-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.101;\n",
-      "}\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.101 - - [11/Mar/2023 22:15:35] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating IP address...\n",
-      "host SW-PLGN-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.105;\n",
-      "}\n",
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 1.1.1.1;\n",
-      "}\n",
-      "host SRV-PEV-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.101;\n",
-      "}\n",
-      "host SW-PLGN-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.105;\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a Flask instance\n",
     "app = Flask(__name__)\n",
